samples/_failures_safe/1761501442_b43775_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_463ec871.c: In function ‘main’:
./samples/SAFE/__tmp_463ec871.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("\nAvailable operations:\n");
      |     ^~~~~~
